Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
             <select id="estado" style="flex:1">
                 <option value="Nuevo">Nuevo</option>
                 <option value="Usado">Usado</option>
+                <option value="otros pro">otros pro</option>
             </select>
         </div>
 
