--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <textarea id="descripcion" placeholder="Detalles del producto..."></textarea>
         <div style="display:flex;gap:10px">
             <input id="precio" type="number" placeholder="Precio $" style="flex:1">
-            <input id="cantidad" type="number" placeholder="Stock" value="1" style="flex:1">
+            <input id="cantidad" type="number" placeholder="Stock" value="1" style="width: 60px; text-align: center;">
             <select id="estado" style="flex:1">
                 <option value="Nuevo">Nuevo</option>
                 <option value="Usado">Usado</option>
