--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
         .sold-overlay{position:absolute; top:0; left:0; width:100%; height:160px; background:rgba(0,0,0,0.7); color:white; display:flex; align-items:center; justify-content:center; font-weight:bold; z-index:1}
         .seccion-titulo{grid-column: 1 / -1; font-size: 14px; font-weight: bold; color: var(--mut); margin-top: 15px; border-bottom: 1px solid var(--b); padding-bottom: 5px;}
     </style>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#007bff">
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('./sw.js')
+        .then(reg => console.log('CheroMarket PWA lista'))
+        .catch(err => console.log('Error de SW', err));
+    });
+  }
+</script>
 </head>
 <body data-theme="light">
 
