Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CheroMarketApp · Pro 🇸🇻</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <style>
+   .auth-container {
+    background: var(--card);
+    padding: 15px;
+    border-bottom: 2px solid var(--azul);
+    text-align: center;
+}
+.auth-container input {
+    margin: 5px auto;
+    display: block;
+    width: 90%;
+    max-width: 300px;
+}
+
+     <style>
         :root{
             --azul:#0047AB; --naranja:#FF8C00; --verde:#25D366;
             --fondo:#f0f2f5; --card:#fff; --txt:#333; --mut:#777; --b:#ddd; --rojo:#c62828
