--- a/index.html
+++ b/index.html
@@ -266,6 +266,14 @@
     </div>
 </div>
 
+// Registrar el Service Worker para que sea PWA
+if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./sw.js')
+            .then(reg => console.log('PWA Lista: SW registrado'))
+            .catch(err => console.log('SW falló', err));
+    });
+}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getFirestore, collection, addDoc, getDocs, doc, query, orderBy, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
