--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#0047AB">
 <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/1162/1162456.png">
+<link rel="manifest" href="manifest.json">
+
+<meta name="theme-color" content="#317EFB">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="CheroMarket">
+<link rel="apple-touch-icon" href="icon-192.jpg">
+
 </head>
 <body data-theme="light">
 
@@ -550,5 +559,20 @@ Object.keys(svData).forEach(d => {
 verificarPerfil();
 cargar();
 </script>
+  // Verificamos si el navegador soporta Service Workers
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('sw.js')
+        .then(function(registration) {
+          // Si sale este mensaje en consola, ¡todo va bien!
+          console.log('ServiceWorker registrado con éxito en el ámbito: ', registration.scope);
+        }, function(err) {
+          // Si hay un error, aparecerá aquí
+          console.log('Fallo en el registro del ServiceWorker: ', err);
+        });
+    });
+  }
+</script>
+
 </body>
 </html>
